Project

General

Profile

Actions

Bug #53177

closed

logging in rgw_main.cc has wrong dout_prefix "rgw dbstore: "

Added by Casey Bodley over 2 years ago. Updated about 2 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
dbstore
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

log output during startup (with default rados configuration):

2021-11-05T14:20:52.286-0400 7ff71ad705c0  0 framework: beast
2021-11-05T14:20:52.286-0400 7ff71ad705c0  0 framework conf key: port, val: 8000
2021-11-05T14:20:52.286-0400 7ff71ad705c0  1 rgw dbstore: radosgw_Main not setting numa affinity
2021-11-05T14:20:52.290-0400 7ff70effd640 20 reqs_thread_entry: start
2021-11-05T14:20:52.290-0400 7ff71ad705c0  1 rgw dbstore: rgw_d3n: rgw_d3n_l1_local_datacache_enabled=0
2021-11-05T14:20:52.290-0400 7ff71ad705c0  1 rgw dbstore: D3N datacache enabled: 0

this happens because rgw_main.cc is (indirectly) including store/dbstore/common/dbstore_log.h, which sets the global dout prefix:

#define dout_prefix *_dout << "rgw dbstore: "

i think dbstore_log.h should only be included by dbstore source files

p.s. using namespace std; should never be used in header files

Actions #1

Updated by Casey Bodley over 2 years ago

  • Status changed from New to Fix Under Review
  • Tags set to dbstore
  • Pull request ID set to 44581
Actions #2

Updated by Soumya Koduri over 2 years ago

Sorry. I overlooked this part. Thanks for fixing it.

"p.s. using namespace std; should never be used in header files"

I will address this in upcoming dbstore PR.

Actions #3

Updated by Soumya Koduri about 2 years ago

  • Status changed from Fix Under Review to Resolved

Soumya Koduri wrote:

Sorry. I overlooked this part. Thanks for fixing it.

"p.s. using namespace std; should never be used in header files"

I will address this in upcoming dbstore PR.

This is fixed as part of commit#3c02841a56f871b247107fcbccb91976b9605f89

Actions

Also available in: Atom PDF